enlarge gap between #primary and #secondary and fix for small res. Considering moving #secondary to below

--- a/style.css
+++ b/style.css
@@ -820,7 +820,7 @@ a:hover{
 #primary{
 	float:left;
 	width:75%;
-	padding-right:30px;
+	padding-right:4em;
 }
 
 #secondary{
@@ -1127,6 +1127,10 @@ ol .children{
 	#primary,
 	#secondary {
 		width:100%;
+	}
+
+	#primary {
+		padding-right: 0;
 	}
 
 }
